# rag-full-stack

./: .env  .gitignore  01_rag_llm_test.py  02_use_embedding_model.py  03_embedding_db.py  04_rag_data_parse.py  05_rag_retriver.py  main.py  pyproject.toml
deepdoc/parser/resume/entities/: schools.py
files/: test.html
provider/: __init__.py  model.py
scripts/: download_model.py  test_cuda.py
