[project]
name = "rag-full-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "diffusers>=0.35.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "markupsafe<3.0.0",
    "modelscope>=1.29.1",
    "peft>=0.17.1",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
