[project]
name = "rag-full-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.20",
    "diffusers>=0.35.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-unstructured>=0.1.6",
    "lxml>=6.0.1",
    "markupsafe<3.0.0",
    "modelscope>=1.29.1",
    "peft>=0.17.1",
    "pymilvus>=2.6.0",
    "pymupdf>=1.26.3",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.1",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
    "unstructured[pdf]>=0.18.13",
    "unstructured-client>=0.42.3",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
    "docx2txt>=0.9",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "strenum>=0.4.15",
    "tiktoken>=0.11.0",
    "datrie>=0.8.2",
    "hanziconv>=0.3.2",
    "langchain-experimental>=0.3.4",
    "addict>=2.4.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.32",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
